--- a/JobPortal.WebApp/Views/Company/Detail.cshtml
+++ b/JobPortal.WebApp/Views/Company/Detail.cshtml
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="col-lg-8 post-list blog-post-list">
                 <div class="single-post">
-                    <a href="/job?slug=@Model.Slug"><img class="img-fluid" src="https://localhost:7211/images/employers/@Model.UrlAvatar" alt="flag"></a>
+                    <img class="img-fluid" src="https://localhost:7211/images/employers/@Model.UrlAvatar" alt="flag">
                     <hr />
                     <h3 style="text-align: center; margin-top: 10px; margin-bottom: 5px">@Model.FullName</h3>
                     <ul class="cat-list">
