--- a/JobPortal.WebApp/Areas/Employer/Views/Job/Update.cshtml
+++ b/JobPortal.WebApp/Areas/Employer/Views/Job/Update.cshtml
@@ -1,4 +1,4 @@
-﻿@model JobPortal.Data.Entities.Job
+﻿@model JobPortal.Data.ViewModel.UpdateJobViewModel
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Http
 @inject SignInManager<AppUser> signInManager
@@ -53,18 +53,6 @@
                                     </div>
                                     <br />
                                     <div class="form-group">
-                                        <label asp-for="MinAge" class="control-label"></label><span class="text-danger">*</span>
-                                        <input asp-for="MinAge" class="form-control" />
-                                        <span asp-validation-for="MinAge" class="text-danger"></span>
-                                    </div>
-                                    <br />
-                                    <div class="form-group">
-                                        <label asp-for="MaxAge" class="control-label"></label><span class="text-danger">*</span>
-                                        <input asp-for="MaxAge" class="form-control" />
-                                        <span asp-validation-for="MaxAge" class="text-danger"></span>
-                                    </div>
-                                    <br />
-                                    <div class="form-group">
                                         <label asp-for="MinSalary" class="control-label"></label><span class="text-danger">*</span>
                                         <input asp-for="MinSalary" class="form-control" />
                                         <span asp-validation-for="MinSalary" class="text-danger"></span>
@@ -87,8 +75,8 @@
                                     </div>
                                     <br />
                                     <div class="form-group">
-                                        <label asp-for="SkillId" class="control-label"></label><span class="text-danger">*</span>
-                                        <select asp-for="SkillId" class="form-control" asp-items="ViewBag.SkillId"></select>
+                                        <label asp-for="SkillIds" class="control-label"></label><span class="text-danger">*</span>
+                                        <select asp-for="SkillIds" class="form-control" asp-items="ViewBag.SkillId" multiple></select>
                                     </div>
                                     <br />
                                     <div class="form-group">
