--- a/JobPortal.WebApp/Views/Home/Index.cshtml
+++ b/JobPortal.WebApp/Views/Home/Index.cshtml
@@ -53,10 +53,27 @@
                             <a href="/job/@job.Slug"><h4>@job.Name</h4></a>
                             <p style="color: #ccc"><span class="lnr lnr-hourglass"></span> @GetTimeAgo(job.CreateDate)</p>
                             <strong><a href="/job?slug=@job.Province.Slug" style="color: #ccc;"><span class="lnr lnr-map-marker"></span> @job.Province.Name</a></strong>
-                            <p>Age: @job.MinAge - @job.MaxAge</p>
                             <p>Job Nature: @job.Time.Name</p>
                             <p class="address"><span class="lnr lnr-book"></span> @job.Title.Name</p>
                             <p class="address">$ @job.MinSalary - @job.MaxSalary USD</p>
+                            <ul class="tags" style="border-radius:10px">
+                                <!-- Skill -->
+                                <li style="border-radius:10px">
+                                    <ul class="skill-list">
+                                        <span class="lnr lnr-tag"></span>
+                                        @foreach (var skill in job.Skills)
+                                        {
+                                            <li style="display: inline-block; margin-right: 5px;">
+                                                <strong>
+                                                    <a href="/job?slug=@skill.Slug" style="color: black; background-color: white; padding: 2px 10px; border-radius: 20px; text-decoration: none;">
+                                                        @skill.Name
+                                                    </a>
+                                                </strong>
+                                            </li>
+                                        }
+                                    </ul>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 }
@@ -113,7 +130,7 @@
                     <div class='col-xs-16 col-3'>
                         <a href="/company/@emp.Slug">
                             <div class="card" style="overflow: hidden;">
-                                <img class="card-img card-img-top" src="https://localhost:7211/images/employers/@emp.UrlAvatar" alt="EMPLOYER IMAGE" height='200' width='150' >
+                                <img class="card-img card-img-top" src="https://localhost:7211/images/employers/@emp.UrlAvatar" alt="EMPLOYER IMAGE" height='200' width='150'>
                                 <div class='card-body'>
                                     <h5 class="text-center" style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">@emp.FullName</h5>
                                     <hr />
